fix overlapping mark tag

--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-	color: #D3D3D3;
+	color: #D3D3D3; line-height: 1.7em;
 }
 
 p {
